--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,23 +1,18 @@
 spring:
   profiles:
-    active: dev
+    active: test
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         dialect: link.toocool.vacancydiary.configuration.CustomPostgreSQL9Dialect
-  flyway:
-    baseline-on-migrate: true
-    out-of-order: true
-    ignore-missing-migrations: true
   output:
     ansi:
       enabled: always
-
-server:
-  port: 80
+  flyway:
+    enabled: false
 
 jwt:
   header: Authorization
